Fix home screen title spacing

--- a/stylesheet/style1.css
+++ b/stylesheet/style1.css
@@ -87,6 +87,10 @@
     height: 304px;
 }
 
+.shift-up {
+    margin-top: -40px;
+}
+
 .speaker_list {
     text-align: center;
     position: relative;
